--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <link
     href=“https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap”
     rel=“stylesheet”>
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <title>BitCoin</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="./assets/img/logo.svg" alt="" />
+      <div class="header-tittle-container">
+        <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+        <p>
+          Batatabit te ayuda a navegar entre los diferentes precios y
+          tendencias.
+        </p>
+        <a href="" class="header-botton"
+          >Conoce Nuestros Planes <span></span
+        ></a>
+      </div>
+    </header>
     <main>
       <section></section>
       <section></section>
