--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
       </div>
     </header>
     <main>
-      <section></section>
+      <section class="main-exchange-container">
+        <div class="imgBackground"></div>
+        <div class="main-exchange-container_title">
+          <h2>Visibilizamos todas las tasas de cambio.</h2>
+          <p>
+            Traemos información en tiempo real de las casas de cambio y las
+            monedas más importantes del mundo.
+          </p>
+        </div>
+        <section class="main-table-container">
+          <div></div>
+        </section>
+      </section>
       <section></section>
       <section></section>
       <section></section>
