--- a/index.html
+++ b/index.html
@@ -33,11 +33,74 @@
             monedas más importantes del mundo.
           </p>
         </div>
-        <section class="main-table-container">
-          <div></div>
+        <section class="exchange__tables">
+          <div class="item title">
+            <h3>Monedas</h3>
+            <div class="item date"><a href=""></a>
+                Actualizado el:
+                <script>
+                  document.write(new Date().toLocaleString());
+                </script> 
+          </div>
+            <div class="item content">
+                    <div class="subitem text">Bitcoin</div>
+                    <div class="subitem value">$ 1.96</div>
+                    <div class="subitem text">Ethereum</div>
+                    <div class="subitem value">$ 0.07</div>
+                    <div class="subitem text">Ripple</div>
+                    <div class="subitem value">$ 2.15</div>
+                    <div class="subitem text">Stellar</div>
+                    <div class="subitem value">$ 4.96</div>
+          </div>
+        </section>
+        <section class="exchange__tables">
+          <div class="item title-two">
+            <h3>Comisiones</h3>
+            <div class="item date"><a href=""></a>
+                Actualizado el:
+                <script>
+                  document.write(new Date().toLocaleString());
+                </script> 
+          </div>
+            <div class="item content">
+                    <div class="subitem text">Bitrade</div>
+                    <div class="subitem value">$ 12.96</div>
+                    <div class="subitem text">Bitpreco</div>
+                    <div class="subitem value">$ 13.07</div>
+                    <div class="subitem text">Novadax</div>
+                    <div class="subitem value">$ 13.15</div>
+                    <div class="subitem text">Coinext</div>
+                    <div class="subitem value">$ 14.96</div>
+          </div>
         </section>
       </section>
-      <section></section>
+      <section class="main-product-detail">
+        <span></span>
+        <h2>Creamos un producto sin comparación.</h2>
+        <p>Confiable y diseñado para su uso diario.</p>
+        <section>
+          <article class="product-cards-container">
+            <span class="clock"></span>
+            <p class="product--card-title">Tiempo real</p>
+            <p class="product-card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+          </article>
+          <article class="product-cards-container">
+            <span></span>
+            <p class="product--card-title">No hay tasas escondidas</p>
+            <p class="product-card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+          </article>
+          <article class="product-cards-container">
+            <span></span>
+            <p class="product--card-title">Compara monedas</p>
+            <p class="product-card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+          </article>
+          <article class="product-cards-container">
+            <span></span>
+            <p class="product--card-title">Información confiable</p>
+            <p class="product-card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+          </article>
+        </section>
+      </section>
       <section></section>
       <section></section>
     </main>
