--- a/index.html
+++ b/index.html
@@ -79,27 +79,39 @@
         <h2>Creamos un producto sin comparación.</h2>
         <p>Confiable y diseñado para su uso diario.</p>
         <section>
-          <article class="product-cards-container">
-            <span class="clock"></span>
-            <p class="product--card-title">Tiempo real</p>
-            <p class="product-card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
-          </article>
-          <article class="product-cards-container">
-            <span></span>
-            <p class="product--card-title">No hay tasas escondidas</p>
-            <p class="product-card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
-          </article>
-          <article class="product-cards-container">
-            <span></span>
-            <p class="product--card-title">Compara monedas</p>
-            <p class="product-card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
-          </article>
-          <article class="product-cards-container">
-            <span></span>
-            <p class="product--card-title">Información confiable</p>
-            <p class="product-card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
-          </article>
-        </section>
+          <section class="product-cards-container">
+              <article class="product-detail-card">
+                <span class="icon-card clock"></span>
+                 <h3 class="product-card-title">Tiempo real</h3>
+                   <p class="product-card-body">
+                            Nuestra API toma información minuto a minutro sobre las tareas que
+                            determinan el comportamiento.
+                  </p>
+                    </article>
+                    <article class="product-detail-card">
+                        <span class="icon-card eye"></span>
+                        <h3 class="product-card-title">No hay tasas escondidas</h3>
+                        <p class="product-card-body">
+                            Ni en la compra o al momento de exit. Barabit siempre te muestra el
+                            costo real de lo estás alquilando.
+                        </p>
+                    </article>
+                    <article class="product-detail-card">
+                        <span class="icon-card dollar"></span>
+                        <h3 class="product-card-title">Compara monedas</h3>
+                        <p class="product-card-body">
+                            No más rumores, con Batabit sabrás el valor real de cada moneda en el
+                            mercado actual.
+                        </p>
+                    </article>
+                    <article class="product-detail-card">
+                        <span class="icon-card circle"></span>
+                        <h3 class="product-card-title">Información confiable</h3>
+                        <p class="product-card-body">
+                            Nuestras fuentes están 100% verificadas y continuamos auditando su
+                            contenido mientras se actualizan.
+                        </p>
+                </section>
       </section>
       <section></section>
       <section></section>
