terminacion del proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Batatabit te ayuda a navegar entre los diferentes precios y
           tendencias.
         </p>
-        <a href="" class="header-botton"
+        <a href="#plans" class="header-botton"
           >Conoce Nuestros Planes <span></span
         ></a>
       </div>
@@ -113,9 +113,58 @@
                         </p>
                 </section>
       </section>
-      <section></section>
-      <section></section>
+      <section class="bitcoin-img">
+        <h2>Conócelo hoy.</h2>
+      </section>
+      <section id="plans" class="main-plans-container">
+        <div class="plans-tittle">
+          <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+          <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+          <section class="plans-container-sliders">
+            <article class="plans-container-card">
+              <span class="small--right--arrow"></span>
+              <p class="recomended">Recomendado</p>
+              <div class="plans-info-container">
+                <h3 class="plan-card-tittle">Pago Anual</h3>
+                <p class="plan-card-price"><sup>$</sup> 99</p>
+                <p class="plan-card-saving">*Ahorras $201 comparado al plan mensual.</p>
+                <button class="plan-card-ca">Escoger este <span></span> </button>
+              </div>
+            </article>
+            <article class="plans-container-card">
+              <span class="small--right--arrow"></span>
+              <span class="small--left--arrow"></span>
+              <div class="plans-info-container">
+                <h3 class="plan-card-tittle">Pago Anual</h3>
+                <p class="plan-card-price"><sup>$</sup> 120</p>
+                <p class="plan-card-saving">*Ahorras $180 comparado al plan mensual.</p>
+                <button class="plan-card-ca">Escoger este <span></span> </button>
+              </div>
+               </article>
+            <article class="plans-container-card">
+              <span class="small--left--arrow"></span>
+              <div class="plans-info-container">
+                <h3 class="plan-card-tittle">Pago Anual</h3>
+                <p class="plan-card-price"><sup>$</sup> 200</p>
+                <p class="plan-card-saving">*Ahorras $100 comparado al plan mensual.</p>
+                <button class="plan-card-ca">Escoger este <span></span> </button>
+              </div>
+               </article>
+          </section>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </div>
+        <figure>
+            <img src="./assets/img/logo-footer.svg" alt="Logo de batata 2020">
+        </figure>
+    </footer>
   </body>
 </html>
