arreglo de cosas

--- a/index.html
+++ b/index.html
@@ -33,47 +33,40 @@
             monedas más importantes del mundo.
           </p>
         </div>
-        <section class="exchange__tables">
-          <div class="item title">
-            <h3>Monedas</h3>
-            <div class="item date"><a href=""></a>
-                Actualizado el:
-                <script>
-                  document.write(new Date().toLocaleString());
-                </script> 
-          </div>
-            <div class="item content">
-                    <div class="subitem text">Bitcoin</div>
-                    <div class="subitem value">$ 1.96</div>
-                    <div class="subitem text">Ethereum</div>
-                    <div class="subitem value">$ 0.07</div>
-                    <div class="subitem text">Ripple</div>
-                    <div class="subitem value">$ 2.15</div>
-                    <div class="subitem text">Stellar</div>
-                    <div class="subitem value">$ 4.96</div>
-          </div>
+        <section class="scrollx">
+            <div class="table-benefits">
+                <h3 class="table-benefits__h3--price">Monedas</h3>
+                <div class="table-container">
+                    <p class="item content">Bitcoin</p>
+                    <p class="item price">$ 1.96 <span class="lower"></span></p>
+                    <p class="item content">Ethereum</p>
+                    <p class="item price">$ 0.07 <span class="upper"></span></p>
+                    <p class="item content">Ripple</p>
+                    <p class="item price">$ 2.15 <span class="lower"></span></p>
+                    <p class="item content">Stellar</p>
+                    <p class="item price">$ 4.96 <span class="lower"></span></p>
+                </div>
+                <div class="table-benefits__p price">
+                <p><b>Actualizado el: </b><script> document.write(new Date().toLocaleString());</script> </p></div>
+            </div>
+            <div class="table-benefits">
+              <span class="small-left-arrow"></span>
+                <h3 class="table-benefits__h3--commissions">Comisiones</h3>
+                <div class="table-container">
+                    <p class="item content">Bitrade</p>
+                    <p class="item price">$ 12.96</p>
+                    <p class="item content">Bitpreco</p>
+                    <p class="item price">$ 13.07</p>
+                    <p class="item content">Novadax</p>
+                    <p class="item price">$ 13.15</p>
+                    <p class="item content">Cointex</p>
+                    <p class="item price">$ 14.96</p>
+                </div>
+                <div class="table-benefits__p commissions">
+                    <p><b>Actualizado el: </b><script> document.write(new Date().toLocaleString());</script> </p></div>
+                </div>
+            </section>
         </section>
-        <section class="exchange__tables">
-          <div class="item title-two">
-            <h3>Comisiones</h3>
-            <div class="item date"><a href=""></a>
-                Actualizado el:
-                <script>
-                  document.write(new Date().toLocaleString());
-                </script> 
-          </div>
-            <div class="item content">
-                    <div class="subitem text">Bitrade</div>
-                    <div class="subitem value">$ 12.96</div>
-                    <div class="subitem text">Bitpreco</div>
-                    <div class="subitem value">$ 13.07</div>
-                    <div class="subitem text">Novadax</div>
-                    <div class="subitem value">$ 13.15</div>
-                    <div class="subitem text">Coinext</div>
-                    <div class="subitem value">$ 14.96</div>
-          </div>
-        </section>
-      </section>
       <section class="main-product-detail">
         <span class="main-product-detail_logobatata" ></span>
         <h2>Creamos un producto sin comparación.</h2>
